fix: исправил архитектуру, исправил ошибки наименований, излишнюю проверку исключений